# solar-srs-viewer

./: .env.example  pyproject.toml  supa_access.env
src/solar_srs/: main.py
src/solar_srs/db/: database.py
src/solar_srs/services/: __init__.py  record_service.py
src/solar_srs/ui/: all_records_widget.py  day_records_widget.py  main_window.py  table_helpers.py
src/solar_srs/utils/: date_utils.py
